engine/tests/detection_corpus/bad/exec_os_system.py
import os
os.system("convert " + filename + " out.png")
